Bug 1297031 - Force to use group in DrawTargetSkia::DrawSurface when colorType is kAlpha_8_SkColorType. r=lsalzman

MozReview-Commit-ID: 7It9JP4WLh5